--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -8,10 +8,9 @@ RUN go mod init && go build /go/src/github.com/balena-go-hello-world/src/server.
 
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:bullseye-run
 
-WORKDIR /go/src/github.com/balena-go-hello-world
+WORKDIR /app
 
 COPY --from=build /go/src/github.com/balena-go-hello-world/server .
 
-COPY views/ views/
 
 CMD [ "./server" ]
